--- a/CuandoTocan/CuandoTocan/CuandoTocan.csproj
+++ b/CuandoTocan/CuandoTocan/CuandoTocan.csproj
@@ -57,16 +57,16 @@
     <Content Include="css\Home.css" />
     <Content Include="Home.aspx" />
     <Content Include="img\favicon.png" />
+    <Content Include="img\fondo.png" />
     <Content Include="img\logo.png" />
     <Content Include="img\logo_min.png" />
     <Content Include="img\lupa.jpg" />
-    <Content Include="img\Slider\02.jpg" />
-    <Content Include="img\Slider\04.jpg" />
-    <Content Include="img\Slider\05.jpg" />
-    <Content Include="img\Slider\09.jpg" />
     <Content Include="img\Slider\a12.png" />
+    <Content Include="img\Slider\acdc.jpg" />
     <Content Include="img\Slider\b05.png" />
+    <Content Include="img\Slider\divididos.jpg" />
     <Content Include="img\Slider\loading.gif" />
+    <Content Include="img\Slider\rata.jpg" />
     <Content Include="js\bootstrap\bootstrap.js" />
     <Content Include="js\Home.js" />
     <Content Include="js\jquery\jquery-2.1.4.js" />
