--- a/CuandoTocan/CuandoTocan/Web.config
+++ b/CuandoTocan/CuandoTocan/Web.config
@@ -9,5 +9,26 @@
     <system.web>
         <compilation debug="true" targetFramework="4.0" />
     </system.web>
+    
+    <!--<AppSettings>
+        <add key="Email" value="CuandoTocan2015@gmail.com"/>
+        <add key="Password" value="CT123456"/>
+        <add key="MailServer" value="smtp.gmail.com"/>
+        <add key="MailPort" value="587"/>
+    </AppSettings>-->
+    
 
-</configuration>
+    <system.serviceModel>
+        <bindings>
+            <basicHttpBinding>
+                <binding name="EnvioMailsSoap" />
+            </basicHttpBinding>
+        </bindings>
+        <client>
+            <endpoint address="http://localhost:63281/WebServices/EnvioMails.asmx"
+                binding="basicHttpBinding" bindingConfiguration="EnvioMailsSoap"
+                contract="ServiceReference1.EnvioMailsSoap" name="EnvioMailsSoap" />
+        </client>
+    </system.serviceModel>
+
+ </configuration>
