--- a/CuandoTocan/CuandoTocan/Web.config
+++ b/CuandoTocan/CuandoTocan/Web.config
@@ -1,34 +1,33 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-
 <!--
   Para obtener más información sobre cómo configurar la aplicación de ASP.NET, visite
   http://go.microsoft.com/fwlink/?LinkId=169433
   -->
-
 <configuration>
-    <system.web>
-        <compilation debug="true" targetFramework="4.0" />
-    </system.web>
-    
-    <!--<AppSettings>
+  <system.web>
+    <compilation debug="true" targetFramework="4.0">
+      <assemblies>
+        <add assembly="System.Data.Entity, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+      </assemblies>
+    </compilation>
+  </system.web>
+  <!--<AppSettings>
         <add key="Email" value="CuandoTocan2015@gmail.com"/>
         <add key="Password" value="CT123456"/>
         <add key="MailServer" value="smtp.gmail.com"/>
         <add key="MailPort" value="587"/>
     </AppSettings>-->
-    
-
-    <system.serviceModel>
-        <bindings>
-            <basicHttpBinding>
-                <binding name="EnvioMailsSoap" />
-            </basicHttpBinding>
-        </bindings>
-        <client>
-            <endpoint address="http://localhost:63281/WebServices/EnvioMails.asmx"
-                binding="basicHttpBinding" bindingConfiguration="EnvioMailsSoap"
-                contract="ServiceReference1.EnvioMailsSoap" name="EnvioMailsSoap" />
-        </client>
-    </system.serviceModel>
-
- </configuration>
+  <system.serviceModel>
+    <bindings>
+      <basicHttpBinding>
+        <binding name="EnvioMailsSoap" />
+      </basicHttpBinding>
+    </bindings>
+    <client>
+      <endpoint address="http://localhost:63281/WebServices/EnvioMails.asmx" binding="basicHttpBinding" bindingConfiguration="EnvioMailsSoap" contract="ServiceReference1.EnvioMailsSoap" name="EnvioMailsSoap" />
+    </client>
+  </system.serviceModel>
+  <connectionStrings>
+    <add name="CuandoTocanEntities" connectionString="metadata=res://*/CTBase.csdl|res://*/CTBase.ssdl|res://*/CTBase.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=mw78bcnsugpw3e;initial catalog=CuandoTocan;integrated security=True;multipleactiveresultsets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
+</configuration>
