--- a/CuandoTocan/CuandoTocan/CuandoTocan.csproj
+++ b/CuandoTocan/CuandoTocan/CuandoTocan.csproj
@@ -56,6 +56,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="css\bootstrap\bootstrap-switch.css" />
+    <Content Include="Global.asax" />
     <Content Include="js\bootstrap\bootstrap-switch.js" />
     <Content Include="Controls\ucFooter.ascx" />
     <Content Include="css\bootstrap\bootstrap-theme.css" />
@@ -128,6 +129,9 @@
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>CTBBDD.edmx</DependentUpon>
+    </Compile>
+    <Compile Include="Global.asax.cs">
+      <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Pages\Evento.aspx.cs">
       <DependentUpon>Evento.aspx</DependentUpon>
