--- a/CuandoTocan/CuandoTocan/CuandoTocan.csproj
+++ b/CuandoTocan/CuandoTocan/CuandoTocan.csproj
@@ -110,7 +110,8 @@
     </None>
     <Content Include="Pages\SendMail.htm" />
     <Content Include="Pages\SendMailA.htm" />
-    <Content Include="Pages\SendMailE.htm" />
+    <Content Include="Pages\SendMailEconAuto.htm" />
+    <Content Include="Pages\SendMailEsinAuto.htm" />
     <Content Include="WebServices\EnvioMails.asmx" />
     <None Include="Service References\ServiceReference1\EnvioMails.wsdl" />
     <Content Include="Web.config">
