ABMEvento [sin terminar]

--- a/CuandoTocan/CuandoTocan/CuandoTocan.csproj
+++ b/CuandoTocan/CuandoTocan/CuandoTocan.csproj
@@ -55,6 +55,7 @@
     <Reference Include="System.EnterpriseServices" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Pages\ABM_evento.aspx" />
     <Content Include="css\bootstrap\bootstrap-switch.css" />
     <Content Include="Global.asax" />
     <Content Include="img\Destacados\divididos.jpg" />
@@ -123,6 +124,13 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Pages\ABM_evento.aspx.cs">
+      <DependentUpon>ABM_evento.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Pages\ABM_evento.aspx.designer.cs">
+      <DependentUpon>ABM_evento.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Controls\ucFooter.ascx.cs">
       <DependentUpon>ucFooter.ascx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
