--- a/CuandoTocan/CuandoTocan/CuandoTocan.csproj
+++ b/CuandoTocan/CuandoTocan/CuandoTocan.csproj
@@ -56,11 +56,14 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="css\bootstrap\bootstrap-switch.css" />
+    <Content Include="css\UsuarioBanda.css" />
     <Content Include="Global.asax" />
     <Content Include="img\Destacados\divididos.jpg" />
     <Content Include="img\Destacados\noTeVaGustar.png" />
     <Content Include="img\Destacados\sodaStereo.png" />
     <Content Include="img\Destacados\sumo.jpg" />
+    <Content Include="img\Users\flachaAbajo.jpg" />
+    <Content Include="img\Users\userDefault.jpg" />
     <Content Include="js\bootstrap\bootstrap-switch.js" />
     <Content Include="Controls\ucFooter.ascx" />
     <Content Include="css\bootstrap\bootstrap-theme.css" />
@@ -116,6 +119,8 @@
     <Content Include="Pages\SendMailA.htm" />
     <Content Include="Pages\SendMailEconAuto.htm" />
     <Content Include="Pages\SendMailEsinAuto.htm" />
+    <Content Include="Pages\UsuarioBanda.aspx" />
+    <Content Include="Pages\UsuarioEstandar.aspx" />
     <Content Include="WebServices\EnvioMails.asmx" />
     <None Include="Service References\ServiceReference1\EnvioMails.wsdl" />
     <Content Include="Web.config">
@@ -173,6 +178,20 @@
     </Compile>
     <Compile Include="Pages\Registro.aspx.designer.cs">
       <DependentUpon>Registro.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Pages\UsuarioBanda.aspx.cs">
+      <DependentUpon>UsuarioBanda.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Pages\UsuarioBanda.aspx.designer.cs">
+      <DependentUpon>UsuarioBanda.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Pages\UsuarioEstandar.aspx.cs">
+      <DependentUpon>UsuarioEstandar.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Pages\UsuarioEstandar.aspx.designer.cs">
+      <DependentUpon>UsuarioEstandar.aspx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Service References\ServiceReference1\Reference.cs">
