--- a/CuandoTocan/CuandoTocan/CuandoTocan.csproj
+++ b/CuandoTocan/CuandoTocan/CuandoTocan.csproj
@@ -117,6 +117,7 @@
       <Generator>WCF Proxy Generator</Generator>
       <LastGenOutput>Reference.cs</LastGenOutput>
     </None>
+    <Content Include="Pages\ResultadosBusq.aspx" />
     <Content Include="Pages\SendMail.htm" />
     <Content Include="Pages\SendMailA.htm" />
     <Content Include="Pages\SendMailEconAuto.htm" />
@@ -194,6 +195,13 @@
     </Compile>
     <Compile Include="Pages\Registro.aspx.designer.cs">
       <DependentUpon>Registro.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Pages\ResultadosBusq.aspx.cs">
+      <DependentUpon>ResultadosBusq.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Pages\ResultadosBusq.aspx.designer.cs">
+      <DependentUpon>ResultadosBusq.aspx</DependentUpon>
     </Compile>
     <Compile Include="Pages\UsuarioBanda.aspx.cs">
       <DependentUpon>UsuarioBanda.aspx</DependentUpon>
