--- a/CuandoTocan/CuandoTocan/CuandoTocan.csproj
+++ b/CuandoTocan/CuandoTocan/CuandoTocan.csproj
@@ -122,12 +122,13 @@
       <LastGenOutput>Reference.cs</LastGenOutput>
     </None>
     <Content Include="Pages\ResultadosBusq.aspx" />
-    <Content Include="Pages\SendEmailEliEvento.htm" />
+    <Content Include="Pages\SendMailEliEvento.htm" />
     <Content Include="Pages\SendMail.htm" />
     <Content Include="Pages\SendMailA.htm" />
     <Content Include="Pages\SendMailEconAuto.htm" />
     <Content Include="Pages\SendMailEsinAuto.htm" />
     <Content Include="Pages\SendMailModEvento.htm" />
+    <Content Include="Pages\SendMailNewEvento.htm" />
     <Content Include="Pages\UsuarioBanda.aspx" />
     <Content Include="Pages\UsuarioEstandar.aspx" />
     <Content Include="WebServices\EnvioMails.asmx" />
